2004-02-13  mput <root@mput.dip.jp>

	* timidity/tables.c: Add newline at the end of file.
	* timidity/readmidi.c (set_xg_chorus_type): fix flanger.

2004-02-13  Kentaro Sato <kentaro@ranvis.com>

	* timidity/aiff_a.c: Support PE_ULAW/PE_ALAW output.
	* timidity/mfi.c: Support MFi version 3, vibrato and pitch bend.
	* timidity/mac_a.c: Minor fix.

2004-02-13  Saito <saito2@digitalme.com>

	* timidity/reverb.[ch], timidity/playmidi.c,
	  timidity/effect.c, timidity/readmidi.c:
	  Adjust Freeverb.
	  Fix and adjust Standard Reverb.
	  Fix play_midi_load_instrument().

2004-02-13  mput <root@mput.dip.jp>

	* timidity/optcode.h (d2i): remove
	* timidity/resample.c (initialize_resampler_coeffs):
	  remove C++ style '//' comment

2004-02-13  Eric A. Welsh <ewelsh@ccb.wustl.edu>

	* timidity/m2m.c: new function fill_nonlin_to_lin_table()
	* doc/m2m.txt: update

2004-02-12  TAMUKI Shoichi <tamuki@linet.gr.jp>

	* timidity/Makefile.{am,in}:
	  Change CR+LF -> LF due to fatal error

2004-02-12  Saito <saito2@digitalme.com>

	* interface/w32g_pref.c, interface/w32g_res.{h,rc},
	  interface/rtsyn_common.c:
	  Support for 24-bit output in Win32GUI/TWSYNTH interface.
	* timidity/w32g_a.c, timidity/Makefile.{am,in}:
	  Remove w32g_a.c.
	* configs/msc[67]-sjis.txt:
	  Update.
	* timidity/gogo_a.c, timidity/vorbis_a.c:
	  Fix for 24-bit output mode.
	* configs/msc6-project.zip, configs/msc6-sjis.txt:
	  Support for TWSYNG service mode.
	* interface/w32g_utl.[ch], interface/w32g_ini.c,
	  interface/w32g_pref.c, interface/w32g_res.[h,rc],
	  timidity/playmidi.[ch], timidity/mix.c:
	  Support for Surround (opt_pan_delay).
	  Improve opt_pan_delay.

2004-02-12  Kentaro Sato <kentaro@ranvis.com>

	* timidity/output.c: Fixed endian problem of 24-bit output.

2004-02-11  mput <root@mput.dip.jp>

	* configure.in: version to 2.13.0-rc1

2004-02-11  Kentaro Sato <kentaro@ranvis.com>

	* timidity/aiff_a.c, timidity/au_a.c, timidity/mac_a.c,