@@ -1,3 +1,8 @@
+2004-02-14  mput <root@mput.dip.jp>
+
+	* Makefile.am (EXTRA_DIST): Fix to fit below
+	* timidity.ide, timidity.mak : Remove
+
 2004-02-13  mput <root@mput.dip.jp>
 
 	* timidity/tables.c: Add newline at the end of file.
